Revert "Fix desktop theme toggle button T-K alignment"
This reverts commit 605163de38254cc10aaa8b9b839504c1e79fc0e0.

--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -760,12 +760,12 @@ pre.highlight {
   }
   .theme-toggle .light-text {
     position: absolute;
-    left: -0.6em;
+    left: 0;
     top: 0;
     width: 100%;
     padding: 20px;
     line-height: 20px;
-    text-align: left;
+    text-align: right;
   }
 }
 .theme-toggle .light-text {
