--- a/less/dark-mode.less
+++ b/less/dark-mode.less
@@ -100,12 +100,12 @@
     .light-text {
       // Absolute positioning - overlays on top of dark-text
       position: absolute;
-      left: -0.6em; // Offset left so T aligns with K of DARK
+      left: 0;
       top: 0;
       width: 100%;
       padding: 20px; // Match container padding
       line-height: 20px;
-      text-align: left; // Left align with offset positioning
+      text-align: right; // Right align so T aligns with K of DARK
     }
   }
   
